# greek-utils

./: CHANGELOG.md  LICENSE  README.md  README.rst  cli.py  pyproject.toml  requirements.in  requirements.txt  setup.py
debug/: debug_mantinades_flashcard.py  debug_verb_flashcard.py
greek_utils/: cli.py  scrape_conjugations.py  verb_flashcard.py
greek_utils/src/: anki_flashcard.py  mantinades_flashcard.py  show.py  verb_list.txt
greek_utils/templates/: verb_flashcard_template.html
greek_verbs/src/: anki_flashcard.py  anki_flashcard_template.html  helpers.py  scrape_conjugations.py  show.py  verb_list.txt
