[project]
name = "greek-utils"
version = "1.1.0"
description = "Automate Modern Greek language learning tasks."
authors = [
    {name = "Andoni Tsouchlarakis", email = "andoni.tsouchlarakis@gmail.com"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    'Programming Language :: Python :: 3.9',
]
dynamic = ["readme", "dependencies", "optional-dependencies"]
requires-python = ">=3.0,<3.10"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/tsouchlarakis/greek-utils"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = 'setuptools.build_meta'

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
readme = { file = "README.md" }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["greek_utils*"]

[project.scripts]
greek-utils = "greek_utils.cli:main"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
profile = "black"
line_length = 100
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_standard_library = ["click"]

[tool.coverage.run]
omit = []
parallel = false
